# Intercepto

./: .gitignore  CMakeLists.txt  README.md  config.json  launch.json  tasks.json
include/: capture.h  config.h  proxy.h
src/: capture.cpp  config.cpp  main.cpp  proxy.cpp
